[package]
name = "solsab-tests"
version = "0.1.0"
description = "Automatic tests for the SolSab program"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
solsab = { version = "0.1.0", path = "../programs/solsab", features = [
    "no-entrypoint",
] }
solana-test-framework = { git = "https://github.com/halbornteam/solana-test-framework", branch = "solana1.18", features = [
    "anchor",
] }
spl-token = "4.0.0"
