[package]
  name = "sablier_lockup"
  version = "0.1.0"
  description = "Created with Anchor"
  edition = "2021"

[lib]
  crate-type = ["cdylib", "lib"]
  name = "sablier_lockup"

[features]
  default = []
  cpi = ["no-entrypoint"]
  no-entrypoint = []
  no-idl = []
  no-log-ix-name = []
  idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
  anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
  anchor-spl = "0.31.1"
  chainlink_solana = { git = "https://github.com/smartcontractkit/chainlink-solana", branch = "solana-2.1" }
  mpl-core = { version = "=0.11.1-beta.2", features = ["anchor"] }
